--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,10 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+.highlight {
+  font-size: 8pt; // Adjust this value to change the font size
+  line-height: 1.8;
+  max-width: 80%; // Adjust this value to your desired width
+  margin: 0 auto; // Centers the code block
+}
