--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% include base_path %}
+<link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
